// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pik theme Button base 1`] = `
Object {
  "Button": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "transparent",
      "bgActive": "gray8",
      "bgDisabled": "transparent",
      "bgHover": "gray4",
      "borderColor": "gray16",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "color": "black",
      "focus": "blue100",
      "minHeight": "m",
      "pb": 8,
      "pl": 24,
      "pr": 24,
      "pt": 8,
    },
  },
  "IconAfter": Object {
    "component": null,
    "props": Object {
      "size": "s",
    },
    "style": Object {},
  },
  "IconBefore": Object {
    "component": null,
    "props": Object {
      "size": "s",
    },
    "style": Object {},
  },
  "Spinner": Object {
    "component": null,
    "props": Object {
      "size": "m",
      "variant": "primary",
    },
    "style": Object {},
  },
  "Text": Object {
    "component": null,
    "props": Object {
      "crop": true,
      "lineHeight": 1.1875,
      "ml": -1,
      "size": "m",
      "valignSelf": "middle",
    },
    "style": Object {},
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="default" checked loading 1`] = `Object {}`;

exports[`pik theme Button fuzz: children="text" preset="default" checked loading=false 1`] = `Object {}`;

exports[`pik theme Button fuzz: children="text" preset="default" checked=false loading 1`] = `Object {}`;

exports[`pik theme Button fuzz: children="text" preset="default" checked=false loading=false 1`] = `Object {}`;

exports[`pik theme Button fuzz: children="text" preset="error" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "red500",
      "bgActive": "red700",
      "bgDisabled": "red500",
      "bgHover": "red600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "red100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="error" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "red500",
      "bgActive": "red700",
      "bgDisabled": "red500",
      "bgHover": "red600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "red100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="error" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "red500",
      "bgActive": "red700",
      "bgDisabled": "red500",
      "bgHover": "red600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "red100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="error" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "red500",
      "bgActive": "red700",
      "bgDisabled": "red500",
      "bgHover": "red600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "red100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="newDefault" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray4",
      "bgActive": "gray12",
      "bgDisabled": "gray8",
      "bgHover": "gray8",
      "borderColor": "transparent",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="newDefault" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray4",
      "bgActive": "gray12",
      "bgDisabled": "gray8",
      "bgHover": "gray8",
      "borderColor": "transparent",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="newDefault" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray4",
      "bgActive": "gray12",
      "bgDisabled": "gray8",
      "bgHover": "gray8",
      "borderColor": "transparent",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="newDefault" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "gray4",
      "bgActive": "gray12",
      "bgDisabled": "gray8",
      "bgHover": "gray8",
      "borderColor": "transparent",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="primary" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "blue500",
      "bgHover": "blue600",
      "borderColor": "transparent",
      "color": "white",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="primary" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "blue500",
      "bgHover": "blue600",
      "borderColor": "transparent",
      "color": "white",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="primary" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "blue500",
      "bgHover": "blue600",
      "borderColor": "transparent",
      "color": "white",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="primary" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "blue500",
      "bgHover": "blue600",
      "borderColor": "transparent",
      "color": "white",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="success" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "green500",
      "bgActive": "green700",
      "bgDisabled": "green500",
      "bgHover": "green600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "green100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="success" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "green500",
      "bgActive": "green700",
      "bgDisabled": "green500",
      "bgHover": "green600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "green100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="success" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "green500",
      "bgActive": "green700",
      "bgDisabled": "green500",
      "bgHover": "green600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "green100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="success" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "green500",
      "bgActive": "green700",
      "bgDisabled": "green500",
      "bgHover": "green600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "green100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="warning" checked loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "orange500",
      "bgActive": "orange700",
      "bgDisabled": "orange500",
      "bgHover": "orange600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "orange100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="warning" checked loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "orange500",
      "bgActive": "orange700",
      "bgDisabled": "orange500",
      "bgHover": "orange600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "orange100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="warning" checked=false loading 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "orange500",
      "bgActive": "orange700",
      "bgDisabled": "orange500",
      "bgHover": "orange600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "orange100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children="text" preset="warning" checked=false loading=false 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "bg": "orange500",
      "bgActive": "orange700",
      "bgDisabled": "orange500",
      "bgHover": "orange600",
      "borderColor": "transparent",
      "color": "white",
      "focus": "orange100",
    },
  },
  "Spinner": Object {
    "props": Object {
      "variant": undefined,
    },
  },
}
`;

exports[`pik theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="l" multiline 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "height": 64,
      "minHeight": "l",
      "minWidth": 290,
      "pb": 9,
      "pl": 48,
      "pr": 48,
      "pt": 9,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "size": "l",
    },
  },
}
`;

exports[`pik theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="m" multiline 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "pb": 9,
      "pt": 9,
    },
  },
}
`;

exports[`pik theme Button fuzz: children=["line 1",{"type":"br","key":"","ref":null,"props":{},"_owner":null,"_store":{}},"line 2"] size="s" multiline 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 9,
      "pt": 9,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "size": "s",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="l" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 11,
      "pl": 36,
      "pr": 36,
      "pt": 11,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "size": "l",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="l" children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 11,
      "pl": 36,
      "pr": 36,
      "pt": 11,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "size": "l",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 11,
      "pl": 36,
      "pr": 36,
      "pt": 11,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "mr": 8,
      "size": "l",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 11,
      "pl": 36,
      "pr": 12,
      "pt": 11,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "mr": 8,
      "size": "l",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconBefore={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 11,
      "pl": 36,
      "pr": 36,
      "pt": 11,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 8,
      "size": "l",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 11,
      "pl": 12,
      "pr": 36,
      "pt": 11,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 8,
      "size": "l",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 11,
      "pl": 36,
      "pr": 36,
      "pt": 11,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 8,
      "mr": 8,
      "size": "l",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="l" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "l",
      "pb": 11,
      "pl": 12,
      "pr": 12,
      "pt": 11,
    },
  },
  "IconAfter": Object {
    "props": Object {
      "size": "m",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "size": "m",
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 8,
      "mr": 8,
      "size": "l",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="m" 1`] = `Object {}`;

exports[`pik theme Button fuzz: size="m" children="text" 1`] = `Object {}`;

exports[`pik theme Button fuzz: size="m" iconAfter={jsx} 1`] = `
Object {
  "Text": Object {
    "props": Object {
      "align": "left",
      "mr": 6,
    },
  },
}
`;

exports[`pik theme Button fuzz: size="m" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "pr": 12,
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "mr": 6,
    },
  },
}
`;

exports[`pik theme Button fuzz: size="m" iconBefore={jsx} 1`] = `
Object {
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 6,
    },
  },
}
`;

exports[`pik theme Button fuzz: size="m" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "pl": 12,
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 6,
    },
  },
}
`;

exports[`pik theme Button fuzz: size="m" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 6,
      "mr": 6,
    },
  },
}
`;

exports[`pik theme Button fuzz: size="m" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "pl": 12,
      "pr": 12,
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 6,
      "mr": 6,
    },
  },
}
`;

exports[`pik theme Button fuzz: size="s" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 5,
      "pt": 5,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "size": "s",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="s" children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 5,
      "pt": 5,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "size": "s",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 5,
      "pt": 5,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "mr": 4,
      "size": "s",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 5,
      "pr": 12,
      "pt": 5,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "mr": 4,
      "size": "s",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconBefore={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 5,
      "pt": 5,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 4,
      "size": "s",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconBefore={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 5,
      "pl": 12,
      "pt": 5,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 4,
      "size": "s",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 5,
      "pt": 5,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 4,
      "mr": 4,
      "size": "s",
    },
  },
}
`;

exports[`pik theme Button fuzz: size="s" iconBefore={jsx} iconAfter={jsx} children="text" 1`] = `
Object {
  "Button": Object {
    "style": Object {
      "minHeight": "s",
      "pb": 5,
      "pl": 12,
      "pr": 12,
      "pt": 5,
    },
  },
  "Spinner": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Text": Object {
    "props": Object {
      "align": "left",
      "ml": 4,
      "mr": 4,
      "size": "s",
    },
  },
}
`;

exports[`pik theme Button snap 1`] = `
Object {
  "defaultProps": Object {
    "preset": "default",
    "pressedOffset": 0,
    "size": "m",
    "type": "button",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Button": Object {
      "disabled": Object {
        "style": Object {
          "overlay": "rgba(255,255,255,0.5)",
        },
      },
      "iconAfter": Object {
        "children": Object {
          "style": Object {
            "pr": 12,
          },
        },
      },
      "iconBefore": Object {
        "children": Object {
          "style": Object {
            "pl": 12,
          },
        },
      },
      "multiline": Object {
        "style": Object {
          "pb": 9,
          "pt": 9,
        },
      },
      "preset": Object {
        "default": Object {
          "style": Object {
            "bg": "transparent",
            "bgActive": "gray8",
            "bgDisabled": "transparent",
            "bgHover": "gray4",
            "borderColor": "gray16",
            "color": "black",
            "focus": "blue100",
          },
        },
        "error": Object {
          "style": Object {
            "bg": "red500",
            "bgActive": "red700",
            "bgDisabled": "red500",
            "bgHover": "red600",
            "color": "white",
            "focus": "red100",
          },
        },
        "newDefault": Object {
          "style": Object {
            "bg": "gray4",
            "bgActive": "gray12",
            "bgDisabled": "gray8",
            "bgHover": "gray8",
            "color": "black",
            "focus": "blue100",
          },
        },
        "primary": Object {
          "style": Object {
            "bg": "blue500",
            "bgActive": "blue700",
            "bgDisabled": "blue500",
            "bgHover": "blue600",
            "color": "white",
            "focus": "blue100",
          },
        },
        "success": Object {
          "style": Object {
            "bg": "green500",
            "bgActive": "green700",
            "bgDisabled": "green500",
            "bgHover": "green600",
            "color": "white",
            "focus": "green100",
          },
        },
        "warning": Object {
          "style": Object {
            "bg": "orange500",
            "bgActive": "orange700",
            "bgDisabled": "orange500",
            "bgHover": "orange600",
            "color": "white",
            "focus": "orange100",
          },
        },
      },
      "size": Object {
        "l": Object {
          "multiline": Object {
            "style": Object {
              "height": 64,
              "minWidth": 290,
              "pl": 48,
              "pr": 48,
            },
          },
          "style": Object {
            "minHeight": "l",
            "pb": 11,
            "pl": 36,
            "pr": 36,
            "pt": 11,
          },
        },
        "m": Object {
          "style": Object {
            "minHeight": "m",
            "pb": 8,
            "pl": 24,
            "pr": 24,
            "pt": 8,
          },
        },
        "s": Object {
          "style": Object {
            "minHeight": "s",
            "pb": 5,
            "pl": 24,
            "pr": 24,
            "pt": 5,
          },
        },
      },
      "style": Object {
        "borderColor": "transparent",
        "borderRadius": 4,
        "borderStyle": "solid",
        "borderWidth": 1,
        "focus": false,
        "pl": 16,
        "pr": 16,
      },
    },
    "IconAfter": Object {
      "size": Object {
        "l": Object {
          "props": Object {
            "size": "m",
          },
        },
        "m": Object {
          "props": Object {
            "size": "s",
          },
        },
        "s": Object {
          "props": Object {
            "size": "s",
          },
        },
      },
    },
    "IconBefore": Object {
      "size": Object {
        "l": Object {
          "props": Object {
            "size": "m",
          },
        },
        "m": Object {
          "props": Object {
            "size": "s",
          },
        },
        "s": Object {
          "props": Object {
            "size": "s",
          },
        },
      },
    },
    "Spinner": Object {
      "preset": Object {
        "default": Object {
          "props": Object {
            "variant": "primary",
          },
        },
      },
      "props": Object {
        "variant": undefined,
      },
      "size": Object {
        "l": Object {
          "props": Object {
            "size": "l",
          },
        },
        "m": Object {
          "props": Object {
            "size": "m",
          },
        },
        "s": Object {
          "props": Object {
            "size": "s",
          },
        },
      },
    },
    "Text": Object {
      "iconAfter": Object {
        "multiline": Object {
          "props": Object {
            "mr": 10,
          },
        },
        "props": Object {
          "align": "left",
          "mr": 6,
        },
        "size": Object {
          "l": Object {
            "props": Object {
              "mr": 8,
            },
          },
          "m": Object {
            "props": Object {
              "mr": 6,
            },
          },
          "s": Object {
            "props": Object {
              "mr": 4,
            },
          },
        },
      },
      "iconBefore": Object {
        "multiline": Object {
          "props": Object {
            "ml": 10,
          },
        },
        "props": Object {
          "align": "left",
          "ml": 6,
        },
        "size": Object {
          "l": Object {
            "props": Object {
              "ml": 8,
            },
          },
          "m": Object {
            "props": Object {
              "ml": 6,
            },
          },
          "s": Object {
            "props": Object {
              "ml": 4,
            },
          },
        },
      },
      "props": Object {
        "crop": true,
        "lineHeight": 1.1875,
        "ml": -1,
        "size": "m",
        "valignSelf": "middle",
      },
      "size": Object {
        "l": Object {
          "props": Object {
            "size": "l",
          },
        },
        "m": Object {
          "props": Object {
            "size": "m",
          },
        },
        "s": Object {
          "props": Object {
            "size": "s",
          },
        },
      },
    },
  },
}
`;

exports[`pik theme Input base 1`] = `
Object {
  "IconAfter": Object {
    "component": null,
    "props": Object {
      "color": "gray28",
      "ml": 10,
      "size": "m",
    },
    "style": Object {},
  },
  "IconBefore": Object {
    "component": null,
    "props": Object {
      "color": "gray28",
      "mr": 10,
      "size": "s",
    },
    "style": Object {},
  },
  "Input": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray4",
      "bgDisabled": "gray4",
      "bgFocus": "white",
      "borderColor": "gray4",
      "borderColorFocus": "gray16",
      "borderColorHover": "gray16",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "color": "black",
      "colorDisabled": "gray64",
      "cursor": "text",
      "focus": false,
      "fontSize": "m",
      "height": "m",
      "pl": 16,
      "placeholderColor": "gray44",
      "pr": 16,
    },
  },
  "InputField": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Postfix": Object {
    "component": null,
    "props": Object {
      "ml": 4,
    },
    "style": Object {},
  },
  "Prefix": Object {
    "component": null,
    "props": Object {
      "mr": 6,
    },
    "style": Object {},
  },
}
`;

exports[`pik theme Input fuzz: clearable="always" 1`] = `
Object {
  "IconAfter": Object {
    "component": #IconCross,
    "props": Object {
      "area": 10,
    },
  },
}
`;

exports[`pik theme Input fuzz: size="l" 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 12,
      "size": "l",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "mr": 12,
      "size": "m",
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": "l",
      "height": "l",
    },
  },
  "Prefix": Object {
    "props": Object {
      "mr": 8,
    },
  },
}
`;

exports[`pik theme Input fuzz: size="l" iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 12,
      "size": "l",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "mr": 12,
      "size": "m",
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": "l",
      "height": "l",
    },
  },
  "Prefix": Object {
    "props": Object {
      "mr": 8,
    },
  },
}
`;

exports[`pik theme Input fuzz: size="l" iconBefore={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 12,
      "size": "l",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "mr": 12,
      "size": "m",
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": "l",
      "height": "l",
    },
  },
  "Prefix": Object {
    "props": Object {
      "mr": 8,
    },
  },
}
`;

exports[`pik theme Input fuzz: size="l" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 12,
      "size": "l",
    },
  },
  "IconBefore": Object {
    "props": Object {
      "mr": 12,
      "size": "m",
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": "l",
      "height": "l",
    },
  },
  "Prefix": Object {
    "props": Object {
      "mr": 8,
    },
  },
}
`;

exports[`pik theme Input fuzz: size="m" 1`] = `Object {}`;

exports[`pik theme Input fuzz: size="m" iconAfter={jsx} 1`] = `Object {}`;

exports[`pik theme Input fuzz: size="m" iconBefore={jsx} 1`] = `Object {}`;

exports[`pik theme Input fuzz: size="m" iconBefore={jsx} iconAfter={jsx} 1`] = `Object {}`;

exports[`pik theme Input fuzz: size="s" 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 7,
    },
  },
  "IconBefore": Object {
    "props": Object {
      "mr": 7,
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": "s",
      "height": "s",
    },
  },
  "Prefix": Object {
    "props": Object {
      "mr": 4,
    },
  },
}
`;

exports[`pik theme Input fuzz: size="s" iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 7,
    },
  },
  "IconBefore": Object {
    "props": Object {
      "mr": 7,
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": "s",
      "height": "s",
    },
  },
  "Prefix": Object {
    "props": Object {
      "mr": 4,
    },
  },
}
`;

exports[`pik theme Input fuzz: size="s" iconBefore={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 7,
    },
  },
  "IconBefore": Object {
    "props": Object {
      "mr": 7,
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": "s",
      "height": "s",
    },
  },
  "Prefix": Object {
    "props": Object {
      "mr": 4,
    },
  },
}
`;

exports[`pik theme Input fuzz: size="s" iconBefore={jsx} iconAfter={jsx} 1`] = `
Object {
  "IconAfter": Object {
    "props": Object {
      "ml": 7,
    },
  },
  "IconBefore": Object {
    "props": Object {
      "mr": 7,
    },
  },
  "Input": Object {
    "style": Object {
      "fontSize": "s",
      "height": "s",
    },
  },
  "Prefix": Object {
    "props": Object {
      "mr": 4,
    },
  },
}
`;

exports[`pik theme Input fuzz: value="value" 1`] = `Object {}`;

exports[`pik theme Input fuzz: value="value" clearable="always" 1`] = `
Object {
  "IconAfter": Object {
    "component": #IconCross,
    "props": Object {
      "area": 10,
    },
  },
}
`;

exports[`pik theme Input fuzz: variant="error" 1`] = `
Object {
  "Input": Object {
    "style": Object {
      "bg": "red50",
      "borderColor": "red50",
      "borderColorFocus": "red300",
      "borderColorHover": "red300",
    },
  },
}
`;

exports[`pik theme Input fuzz: variant="primary" 1`] = `Object {}`;

exports[`pik theme Input fuzz: variant="secondary" 1`] = `
Object {
  "Input": Object {
    "style": Object {
      "bg": "gray8",
      "borderColor": "gray8",
      "borderColorFocus": "gray20",
      "borderColorHover": "gray20",
    },
  },
}
`;

exports[`pik theme Input fuzz: variant="success" 1`] = `
Object {
  "Input": Object {
    "style": Object {
      "bg": "green50",
      "borderColor": "green50",
      "borderColorFocus": "green300",
      "borderColorHover": "green300",
    },
  },
}
`;

exports[`pik theme Input fuzz: variant="warning" 1`] = `
Object {
  "Input": Object {
    "style": Object {
      "bg": "orange50",
      "borderColor": "orange50",
      "borderColorFocus": "orange300",
      "borderColorHover": "orange300",
    },
  },
}
`;

exports[`pik theme Input snap 1`] = `
Object {
  "defaultProps": Object {
    "deletePlaceholderOnFocus": true,
    "kind": "outline",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "IconAfter": Object {
      "clearable": Object {
        "component": #IconCross,
        "props": Object {
          "area": 10,
          "size": [Function],
        },
      },
      "props": Object {
        "color": "gray28",
      },
      "size": Object {
        "l": Object {
          "props": Object {
            "ml": 12,
            "size": "l",
          },
        },
        "m": Object {
          "props": Object {
            "ml": 10,
            "size": "m",
          },
        },
        "s": Object {
          "props": Object {
            "ml": 7,
            "size": "m",
          },
        },
      },
    },
    "IconBefore": Object {
      "props": Object {
        "color": "gray28",
        "size": [Function],
      },
      "size": Object {
        "l": Object {
          "props": Object {
            "mr": 12,
          },
        },
        "m": Object {
          "props": Object {
            "mr": 10,
          },
        },
        "s": Object {
          "props": Object {
            "mr": 7,
          },
        },
      },
    },
    "Input": Object {
      "preset": Object {
        "inverse": Object {
          "variant": Object {
            "primary": Object {
              "style": Object {
                "bg": "white",
                "bgDisabled": "white",
                "borderColor": "white",
              },
            },
          },
        },
      },
      "size": Object {
        "l": Object {
          "style": Object {
            "fontSize": "l",
            "pl": 16,
            "pr": 16,
          },
        },
        "m": Object {
          "style": Object {
            "fontSize": "m",
            "pl": 16,
            "pr": 16,
          },
        },
        "s": Object {
          "style": Object {
            "fontSize": "s",
            "pl": 16,
            "pr": 16,
          },
        },
      },
      "style": Object {
        "bgDisabled": "gray4",
        "bgFocus": "white",
        "borderRadius": 4,
        "borderStyle": "solid",
        "borderWidth": 1,
        "color": "black",
        "colorDisabled": "gray64",
        "cursor": "text",
        "focus": false,
        "height": [Function],
        "placeholderColor": "gray44",
      },
      "variant": Object {
        "error": Object {
          "style": Object {
            "bg": "red50",
            "borderColor": "red50",
            "borderColorFocus": "red300",
            "borderColorHover": "red300",
          },
        },
        "primary": Object {
          "style": Object {
            "bg": "gray4",
            "borderColor": "gray4",
            "borderColorFocus": "gray16",
            "borderColorHover": "gray16",
          },
        },
        "secondary": Object {
          "style": Object {
            "bg": "gray8",
            "borderColor": "gray8",
            "borderColorFocus": "gray20",
            "borderColorHover": "gray20",
          },
        },
        "success": Object {
          "style": Object {
            "bg": "green50",
            "borderColor": "green50",
            "borderColorFocus": "green300",
            "borderColorHover": "green300",
          },
        },
        "warning": Object {
          "style": Object {
            "bg": "orange50",
            "borderColor": "orange50",
            "borderColorFocus": "orange300",
            "borderColorHover": "orange300",
          },
        },
      },
    },
    "InputField": Object {},
    "Postfix": Object {
      "props": Object {
        "ml": 4,
      },
    },
    "Prefix": Object {
      "size": Object {
        "l": Object {
          "props": Object {
            "mr": 8,
          },
        },
        "m": Object {
          "props": Object {
            "mr": 6,
          },
        },
        "s": Object {
          "props": Object {
            "mr": 4,
          },
        },
      },
    },
  },
}
`;

exports[`pik theme Select base 1`] = `
Object {
  "Input": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "pointerEvents": false,
    },
  },
}
`;

exports[`pik theme Select fuzz: size="l" 1`] = `
Object {
  "Input": Object {
    "style": Object {
      "pr": 11,
    },
  },
}
`;

exports[`pik theme Select fuzz: size="m" 1`] = `
Object {
  "Input": Object {
    "style": Object {
      "pr": 11,
    },
  },
}
`;

exports[`pik theme Select fuzz: size="s" 1`] = `
Object {
  "Input": Object {
    "style": Object {
      "pr": 11,
    },
  },
}
`;

exports[`pik theme Select snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Input": Object {
      "size": Object {
        "l": Object {
          "style": Object {
            "pr": 11,
          },
        },
        "m": Object {
          "style": Object {
            "pr": 11,
          },
        },
        "s": Object {
          "style": Object {
            "pr": 11,
          },
        },
      },
      "style": Object {
        "pointerEvents": false,
      },
    },
  },
}
`;

exports[`pik theme Text base 1`] = `
Object {
  "Text": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "fontSize": undefined,
      "lineHeight": "normal",
    },
  },
}
`;

exports[`pik theme Text fuzz: dense 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "lineHeight": "dense",
    },
  },
}
`;

exports[`pik theme Text fuzz: preset="heading" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "l",
      "lineHeight": 1.4,
    },
  },
}
`;

exports[`pik theme Text fuzz: preset="heading-large" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "xl",
      "lineHeight": 1.34,
    },
  },
}
`;

exports[`pik theme Text fuzz: preset="heading-small" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "m",
      "lineHeight": 1.5,
    },
  },
}
`;

exports[`pik theme Text fuzz: preset="title" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "xxxl",
      "lineHeight": 1.2,
    },
  },
}
`;

exports[`pik theme Text fuzz: preset="title-small" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "xxl",
      "lineHeight": 1.25,
    },
  },
}
`;

exports[`pik theme Text fuzz: size="l" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "l",
      "lineHeight": 1.4,
    },
  },
}
`;

exports[`pik theme Text fuzz: size="m" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "m",
      "lineHeight": 1.5,
    },
  },
}
`;

exports[`pik theme Text fuzz: size="s" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "fontSize": "s",
      "lineHeight": 1.43,
    },
  },
}
`;

exports[`pik theme Text fuzz: variant="error" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "color": "red500",
    },
  },
}
`;

exports[`pik theme Text fuzz: variant="primary" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "color": "blue500",
    },
  },
}
`;

exports[`pik theme Text fuzz: variant="secondary" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "color": "gray52",
    },
  },
}
`;

exports[`pik theme Text fuzz: variant="success" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "color": "green500",
    },
  },
}
`;

exports[`pik theme Text fuzz: variant="warning" 1`] = `
Object {
  "Text": Object {
    "style": Object {
      "color": "yellow500",
    },
  },
}
`;

exports[`pik theme Text snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Text": Object {
      "dense": Object {
        "style": Object {
          "lineHeight": "dense",
        },
      },
      "size": Object {
        "l": Object {
          "style": Object {
            "lineHeight": 1.4,
          },
        },
        "m": Object {
          "style": Object {
            "lineHeight": 1.5,
          },
        },
        "s": Object {
          "style": Object {
            "lineHeight": 1.43,
          },
        },
        "xl": Object {
          "style": Object {
            "lineHeight": 1.34,
          },
        },
        "xs": Object {
          "style": Object {
            "lineHeight": 1.23,
          },
        },
        "xxl": Object {
          "style": Object {
            "lineHeight": 1.25,
          },
        },
        "xxxl": Object {
          "style": Object {
            "lineHeight": 1.2,
          },
        },
      },
      "style": Object {
        "fontSize": [Function],
        "lineHeight": "normal",
      },
      "variant": Object {
        "error": Object {
          "style": Object {
            "color": "red500",
          },
        },
        "primary": Object {
          "style": Object {
            "color": "blue500",
          },
        },
        "secondary": Object {
          "style": Object {
            "color": "gray52",
          },
        },
        "success": Object {
          "style": Object {
            "color": "green500",
          },
        },
        "warning": Object {
          "style": Object {
            "color": "yellow500",
          },
        },
      },
    },
  },
}
`;

exports[`pik theme Textarea base 1`] = `
Object {
  "IconClear": Object {
    "component": #IconCross,
    "props": Object {
      "area": 10,
      "color": "gray28",
      "size": "m",
      "visible": false,
    },
    "style": Object {},
  },
  "Textarea": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray4",
      "bgDisabled": "gray4",
      "bgFocus": "white",
      "borderColor": "gray4",
      "borderColorFocus": "gray16",
      "borderColorHover": "gray16",
      "borderRadius": 4,
      "borderStyle": "solid",
      "borderWidth": 1,
      "color": "black",
      "colorDisabled": "gray64",
      "cursor": "text",
      "focus": false,
      "fontSize": "m",
      "lineHeight": "normal",
      "minHeight": "m",
      "pb": 6,
      "pl": 16,
      "placeholderColor": "gray44",
      "pr": 16,
      "pt": 6,
    },
  },
}
`;

exports[`pik theme Textarea fuzz: clearable="always" 1`] = `
Object {
  "IconClear": Object {
    "props": Object {
      "visible": true,
    },
  },
}
`;

exports[`pik theme Textarea fuzz: size="l" 1`] = `
Object {
  "IconClear": Object {
    "props": Object {
      "size": "l",
    },
  },
  "Textarea": Object {
    "style": Object {
      "fontSize": "l",
      "minHeight": "l",
      "pb": 8,
      "pt": 8,
    },
  },
}
`;

exports[`pik theme Textarea fuzz: size="m" 1`] = `Object {}`;

exports[`pik theme Textarea fuzz: size="s" 1`] = `
Object {
  "IconClear": Object {
    "props": Object {
      "size": "s",
    },
  },
  "Textarea": Object {
    "style": Object {
      "fontSize": "s",
      "minHeight": "s",
      "pb": 7,
      "pt": 7,
    },
  },
}
`;

exports[`pik theme Textarea fuzz: value="value" 1`] = `Object {}`;

exports[`pik theme Textarea fuzz: value="value" clearable="always" 1`] = `
Object {
  "IconClear": Object {
    "props": Object {
      "visible": true,
    },
  },
}
`;

exports[`pik theme Textarea fuzz: variant="error" 1`] = `
Object {
  "Textarea": Object {
    "style": Object {
      "bg": "red50",
      "borderColor": "red50",
      "borderColorFocus": "red300",
      "borderColorHover": "red300",
    },
  },
}
`;

exports[`pik theme Textarea fuzz: variant="primary" 1`] = `Object {}`;

exports[`pik theme Textarea fuzz: variant="secondary" 1`] = `
Object {
  "Textarea": Object {
    "style": Object {
      "bg": "gray8",
      "borderColor": "gray8",
      "borderColorFocus": "gray20",
      "borderColorHover": "gray20",
    },
  },
}
`;

exports[`pik theme Textarea fuzz: variant="success" 1`] = `
Object {
  "Textarea": Object {
    "style": Object {
      "bg": "green50",
      "borderColor": "green50",
      "borderColorFocus": "green300",
      "borderColorHover": "green300",
    },
  },
}
`;

exports[`pik theme Textarea fuzz: variant="warning" 1`] = `
Object {
  "Textarea": Object {
    "style": Object {
      "bg": "orange50",
      "borderColor": "orange50",
      "borderColorFocus": "orange300",
      "borderColorHover": "orange300",
    },
  },
}
`;

exports[`pik theme Textarea snap 1`] = `
Object {
  "defaultProps": Object {
    "deletePlaceholderOnFocus": true,
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "IconClear": Object {
      "component": #IconCross,
      "props": Object {
        "area": 10,
        "color": "gray28",
        "size": [Function],
        "visible": [Function],
      },
    },
    "Textarea": Object {
      "preset": Object {
        "inverse": Object {
          "variant": Object {
            "primary": Object {
              "style": Object {
                "bg": "white",
                "bgDisabled": "white",
                "borderColor": "white",
              },
            },
          },
        },
      },
      "size": Object {
        "l": Object {
          "style": Object {
            "pb": 8,
            "pl": 16,
            "pr": 16,
            "pt": 8,
          },
        },
        "m": Object {
          "style": Object {
            "pb": 6,
            "pl": 16,
            "pr": 16,
            "pt": 6,
          },
        },
        "s": Object {
          "style": Object {
            "pb": 7,
            "pl": 16,
            "pr": 16,
            "pt": 7,
          },
        },
      },
      "style": Object {
        "bgDisabled": "gray4",
        "bgFocus": "white",
        "borderRadius": 4,
        "borderStyle": "solid",
        "borderWidth": 1,
        "color": "black",
        "colorDisabled": "gray64",
        "cursor": "text",
        "focus": false,
        "fontSize": [Function],
        "lineHeight": "normal",
        "minHeight": [Function],
        "placeholderColor": "gray44",
      },
      "variant": Object {
        "error": Object {
          "style": Object {
            "bg": "red50",
            "borderColor": "red50",
            "borderColorFocus": "red300",
            "borderColorHover": "red300",
          },
        },
        "primary": Object {
          "style": Object {
            "bg": "gray4",
            "borderColor": "gray4",
            "borderColorFocus": "gray16",
            "borderColorHover": "gray16",
          },
        },
        "secondary": Object {
          "style": Object {
            "bg": "gray8",
            "borderColor": "gray8",
            "borderColorFocus": "gray20",
            "borderColorHover": "gray20",
          },
        },
        "success": Object {
          "style": Object {
            "bg": "green50",
            "borderColor": "green50",
            "borderColorFocus": "green300",
            "borderColorHover": "green300",
          },
        },
        "warning": Object {
          "style": Object {
            "bg": "orange50",
            "borderColor": "orange50",
            "borderColorFocus": "orange300",
            "borderColorHover": "orange300",
          },
        },
      },
    },
  },
}
`;
